<resources>
    <string name="CronetProviderClassName">Hello world</string>
    <string name="_1_free_message">+1 free message</string>
    <string name="_3_day_free_trial">3 Day free trial</string>
    <string name="_3_days_free_then_s_per_week">3 days free, then %s per week</string>
    <string name="_3_days_free_trial_then_6_99_per_week_cancel_anytime">3 days free trial then %s per week. Cancel anytime!</string>
    <string name="_3_days_trial_then_s_week">3 days trial then %s/ week</string>
    <string name="_3_free_messages">+3 free messages</string>
    <string name="_5_stars">5 Stars!</string>
    <string name="_cancel">CANCEL</string>
    <string name="_continue">Continue</string>
    <string name="_excellent">Excellent !!!</string>
    <string name="_later">LATER</string>
    <string name="_loading_ads">Loading ads</string>
    <string name="_maybe_later">Maybe Later</string>
    <string name="_new">( New )</string>
    <string name="_not_good">Not good</string>
    <string name="_notify">Notify</string>
    <string name="_ok">OK</string>
    <string name="_please_select_star">Please select star !</string>
    <string name="_quite_ok">Quite ok</string>
    <string name="_rating_comment_hint">Please write your comment here …</string>
    <string name="_rating_des">Give us a quick rating so we know if you like it?</string>
    <string name="_rating_title">Did you like the app?</string>
    <string name="_retry">Retry</string>
    <string name="_submit">SUBMIT</string>
    <string name="_survey_not_now">Not Now</string>
    <string name="_survey_noti_submit">Submit</string>
    <string name="_survey_submit">Submit</string>
    <string name="_thank_for_rating">Thanks for rating</string>
    <string name="_thanks">Thanks!</string>
    <string name="_very_bad">Very Bad</string>
    <string name="_very_good">Very Good</string>
    <string name="_video_starting_in_text">Video starting in %d…</string>
    <string name="a_fresh_and_elegant_default_theme_characterized_by_a_harmonious_blend_of_light_turquoise_and_white">A fresh and elegant default theme characterized by a harmonious blend of light turquoise and white</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_us">About us</string>
    <string name="access_the_advanced_models_chatgpt_gpt_4o_openai_o1_geminini_claude">Hello world</string>
    <string name="access_to_gpt_4_most_advanced_ai_model">Hello world</string>
    <string name="access_to_gpt_4o_most_advanced_ai_model">Hello world</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="ad_free">No Ad experience</string>
    <string name="ad_free_experience">Ad-Free Experience</string>
    <string name="ad_kh_ng_availble_comback_later_after_1m">Ads are not available, please come back in 1 minute</string>
    <string name="add">ADD</string>
    <string name="add2">Add</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="add_to_home_screen">Add to Home screen</string>
    <string name="adjust">Adjust</string>
    <string name="ads_app_id">ca-app-pub-3548016532531500~3485189525</string>
    <string name="ads_free_experiece">Ads Free Experience</string>
    <string name="ads_is_error_please_try_again_later">Ads is error. Please try again later</string>
    <string name="advanced_natural_language_understanding">Advanced natural language understanding</string>
    <string name="after_add_you_can_back_to_home_screen_to_touch_amp_hold_the_widget_to_move_it_around_the_screen">After Add you can back to Home screen to touch &amp; hold the widget to move it around the screen</string>
    <string name="ai_art">AI Art</string>
    <string name="ai_art_2">AI Art</string>
    <string name="ai_assisstant">Hello world</string>
    <string name="ai_assistant">Hello world</string>
    <string name="ai_character">AI Character</string>
    <string name="ai_model">AI model</string>
    <string name="ai_search">AI search</string>
    <string name="al_exo_controls_cc_disabled_description">Enable subtitles</string>
    <string name="al_exo_controls_cc_enabled_description">Disable subtitles</string>
    <string name="al_exo_controls_custom_playback_speed">%1$.2fx</string>
    <string name="al_exo_controls_fastforward_description">Fast forward</string>
    <string name="al_exo_controls_fullscreen_enter_description">Enter fullscreen</string>
    <string name="al_exo_controls_fullscreen_exit_description">Exit fullscreen</string>
    <string name="al_exo_controls_hide">Hide player controls</string>
    <string name="al_exo_controls_next_description">Next</string>
    <string name="al_exo_controls_overflow_hide_description">Hide additional settings</string>
    <string name="al_exo_controls_overflow_show_description">Show additional settings</string>
    <string name="al_exo_controls_pause_description">Pause</string>
    <string name="al_exo_controls_play_description">Play</string>
    <string name="al_exo_controls_playback_speed">Speed</string>
    <string name="al_exo_controls_playback_speed_normal">Normal</string>
    <string name="al_exo_controls_previous_description">Previous</string>
    <string name="al_exo_controls_repeat_all_description">Repeat all</string>
    <string name="al_exo_controls_repeat_off_description">Repeat none</string>
    <string name="al_exo_controls_repeat_one_description">Repeat one</string>
    <string name="al_exo_controls_rewind_description">Rewind</string>
    <string name="al_exo_controls_seek_bar_description">Playback progress</string>
    <string name="al_exo_controls_settings_description">Settings</string>
    <string name="al_exo_controls_show">Show player controls</string>
    <string name="al_exo_controls_shuffle_off_description">Shuffle off</string>
    <string name="al_exo_controls_shuffle_on_description">Shuffle on</string>
    <string name="al_exo_controls_stop_description">Stop</string>
    <string name="al_exo_controls_time_placeholder">00:00:00</string>
    <string name="al_exo_controls_vr_description">VR mode</string>
    <string name="al_exo_download_completed">Download completed</string>
    <string name="al_exo_download_description">Download</string>
    <string name="al_exo_download_downloading">Downloading</string>
    <string name="al_exo_download_failed">Download failed</string>
    <string name="al_exo_download_notification_channel_name">Downloads</string>
    <string name="al_exo_download_paused">Downloads paused</string>
    <string name="al_exo_download_paused_for_network">Downloads waiting for network</string>
    <string name="al_exo_download_paused_for_wifi">Downloads waiting for WiFi</string>
    <string name="al_exo_download_removing">Removing downloads</string>
    <string name="al_exo_item_list">%1$s, %2$s</string>
    <string name="al_exo_track_bitrate">%1$.2f Mbps</string>
    <string name="al_exo_track_mono">Mono</string>
    <string name="al_exo_track_resolution">%1$d × %2$d</string>
    <string name="al_exo_track_role_alternate">Alternate</string>
    <string name="al_exo_track_role_closed_captions">CC</string>
    <string name="ask_everything_about_your_file">Ask everything about your file</string>
    <string name="cancel">Cancel</string>
    <string name="chat_with_any_pdf">Chat with any PDF.</string>
    <string name="chatpdf_history">ChatPDF History</string>
    <string name="done">Done</string>
    <string name="go_to_setting">Go to Setting</string>
    <string name="got_it">Got it</string>
    <string name="gpt_4o_is_here">Hello world</string>
    <string name="gpt_4o_newest_and_most_advanced_ai_technology_of_the_world_is_now_available_on_chatbot_ai_do_you_want_to_experience_it">Hello world</string>
    <string name="how_does_it_work">How does it work?</string>
    <string name="if_you_can_not_find_the_created_widget_please_try_the_following_steps_to_adda_widget_manually">Widget has been added to random empty area on your Home screen. If you can not find the created widget, please try the following steps to add a widget manually.</string>
    <string name="instruction">Instruction</string>
    <string name="just_one_last_step">Just one last step…</string>
    <string name="let_s_go">"Let's Go!"</string>
    <string name="maximum_size_100_pages">Maximum size: 100 pages</string>
    <string name="maybe_later">Maybe Later</string>
    <string name="msg_chat_with_any_pdf">Summarize, analyze your documents and fasten your comprehension effortlessly.</string>
    <string name="msg_dialog_over_message">Upgrade to our premium plan and unlock the ability to ask longer questions or keep your message within 500 characters.</string>
    <string name="msg_dialog_report_success">Your feedback helps our system learn when something isn’t right.</string>
    <string name="msg_error_upload">%s file size exceeds maximum limit. Please upload a file that is under 100 pages.</string>
    <string name="msg_just_one_last_step">"1. Open your phone Settings 
2. Tap on Permissions 
3. Tap on Files and Media 
4. Allow management of all files"</string>
    <string name="on_a_home_screen_touch_and_hold_an_empty_space">On a Home screen, touch and hold an empty space.</string>
    <string name="report_success">Report submitted</string>
    <string name="see_all">See All</string>
    <string name="successfully_add_widget_to_your_phone_screen">Successfully add widget to your Phone screen</string>
    <string name="tap_widgets">Tap Widgets</string>
    <string name="title_dialog_over_message">Sorry! You have reach word limit</string>
    <string name="title_just_one_last_step">Hello world</string>
    <string name="title_report_success_dialog">Thank you for letting us know.</string>
    <string name="touch_and_hold_a_widget_slide_the_widget_to_where_you_want_it">Touch and hold a widget. Slide the widget to where you want it.</string>
    <string name="upgrade">Upgrade</string>
    <string name="upload_your_file">Upload your file</string>
    <string name="upload_your_pdf_file">Upload your PDF file</string>
    <string name="wait_for_ai_to_analyze_your_file">Wait for AI to analyze your file</string>
</resources>