<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:tag="layout/fragment_pdf_0" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:id="@id/banner_container" android:background="#1a000000" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <RelativeLayout android:id="@id/rlUploadFile" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/banner_container">
        <TextView android:textSize="24.0dip" android:textColor="#ff272727" android:id="@id/tvTitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="16.0dip" android:text="@string/chat_with_any_pdf" android:fontFamily="@font/sf_pro_text_bold" android:layout_marginHorizontal="16.0dip" />
        <TextView android:textSize="16.0dip" android:textColor="#ff808080" android:id="@id/tvDescription" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="8.0dip" android:layout_marginRight="16.0dip" android:text="@string/msg_chat_with_any_pdf" android:layout_below="@id/tvTitle" android:fontFamily="@font/sf_pro_text_medium" android:layout_marginHorizontal="16.0dip" />
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/llUploadPDF" android:background="@drawable/bg_dasher_border_pdf_15dp" android:padding="24.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginBottom="16.0dip" android:layout_below="@id/tvDescription" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip">
            <ImageView android:layout_width="40.0dip" android:layout_height="40.0dip" android:src="@drawable/ic_pdf_upload_40dp" />
            <TextView android:textSize="16.0dip" android:textColor="#ff272727" android:id="@id/title_upload_file" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/upload_your_pdf_file" android:fontFamily="@font/sf_pro_text_semibold" />
            <TextView android:textSize="12.0dip" android:textColor="#ff808080" android:id="@id/description_upload_file" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/maximum_size_100_pages" android:fontFamily="@font/sf_pro_text_medium" />
        </LinearLayout>
        <TextView android:textSize="12.0dip" android:textColor="#ffd9534f" android:id="@id/tvErrorUpload" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:text="@string/msg_error_upload" android:layout_below="@id/llUploadPDF" android:fontFamily="@font/sf_pro_text_medium" android:layout_marginHorizontal="16.0dip" />
        <TextView android:textSize="16.0dip" android:textColor="#ff272727" android:id="@id/tvTitle2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:text="@string/how_does_it_work" android:layout_below="@id/tvErrorUpload" android:fontFamily="@font/sf_pro_text_semibold" android:layout_marginHorizontal="16.0dip" />
        <LinearLayout android:orientation="vertical" android:id="@id/llListFeature" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:layout_below="@id/tvTitle2">
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="6.0dip">
                <ImageView android:layout_width="20.0dip" android:layout_height="20.0dip" android:src="@drawable/ic_number_1_20dp" />
                <TextView android:textSize="14.0dip" android:textColor="#ff272727" android:id="@id/content_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/upload_your_file" android:fontFamily="@font/sf_pro_text_regular" android:layout_marginStart="8.0dip" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="6.0dip">
                <ImageView android:layout_width="20.0dip" android:layout_height="20.0dip" android:src="@drawable/ic_number_2_20dp" />
                <TextView android:textSize="14.0dip" android:textColor="#ff272727" android:id="@id/content_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wait_for_ai_to_analyze_your_file" android:fontFamily="@font/sf_pro_text_regular" android:layout_marginStart="8.0dip" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="6.0dip">
                <ImageView android:layout_width="20.0dip" android:layout_height="20.0dip" android:src="@drawable/ic_number_3_20dp" />
                <TextView android:textSize="14.0dip" android:textColor="#ff272727" android:id="@id/content_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ask_everything_about_your_file" android:fontFamily="@font/sf_pro_text_regular" android:layout_marginStart="8.0dip" />
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout android:id="@id/rlHistory" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_below="@id/llListFeature">
            <TextView android:textSize="16.0dip" android:textColor="#ff272727" android:id="@id/tvTitle3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:text="@string/chatpdf_history" android:fontFamily="@font/sf_pro_text_semibold" android:layout_marginHorizontal="16.0dip" />
            <TextView android:textSize="12.0dip" android:textColor="#ff03e2e1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:text="@string/see_all" android:fontFamily="@font/sf_pro_text_medium" android:layout_alignParentEnd="true" android:layout_marginHorizontal="16.0dip" />
            <androidx.recyclerview.widget.RecyclerView android:orientation="horizontal" android:id="@id/rcvHistoryPDF" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_below="@id/tvTitle3" android:layout_marginStart="16.0dip" app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </RelativeLayout>
    </RelativeLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/rlRequestFailPermistion" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:layout_width="108.0dip" android:layout_height="123.0dip" android:src="@drawable/ic_pdf_permission" />
        <TextView android:textSize="24.0dip" android:textColor="#ff272727" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/just_one_last_step" android:fontFamily="@font/sf_pro_text_semibold" android:layout_marginStart="8.0dip" />
        <TextView android:textSize="16.0dip" android:textColor="#ff808080" android:gravity="center" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/title_just_one_last_step" android:fontFamily="@font/sf_pro_text_medium" android:layout_marginStart="8.0dip" />
        <TextView android:textSize="16.0dip" android:textColor="#ff808080" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/msg_just_one_last_step" android:fontFamily="@font/sf_pro_text_medium" android:layout_marginStart="8.0dip" />
        <TextView android:textSize="16.0dip" android:textColor="#ffffffff" android:background="@drawable/bg_main_gpt35_10dp" android:paddingLeft="50.0dip" android:paddingTop="10.0dip" android:paddingRight="50.0dip" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="60.0dip" android:text="@string/go_to_setting" android:fontFamily="@font/sf_pro_text_medium" android:layout_marginStart="8.0dip" android:paddingHorizontal="50.0dip" android:paddingVertical="10.0dip" />
    </LinearLayout>
</RelativeLayout>