<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:tag="layout/bottom_dialog_report_success_0" android:background="@drawable/bg_white_10dp" android:paddingLeft="20.0dip" android:paddingTop="16.0dip" android:paddingRight="20.0dip" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingHorizontal="20.0dip" android:paddingVertical="16.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="18.0dip" android:textColor="@color/black" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/report_success" android:layout_centerHorizontal="true" android:fontFamily="@font/sf_pro_text_semibold" />
        <ImageView android:id="@id/ivClose" android:layout_width="30.0dip" android:layout_height="30.0dip" android:src="@drawable/ic_close_30dp_5" android:layout_centerVertical="true" android:layout_alignParentEnd="true" app:tint="@color/black" />
    </RelativeLayout>
    <View android:background="@color/line" android:layout_width="fill_parent" android:layout_height="0.5dip" />
    <TextView android:textSize="14.0dip" android:textColor="@color/black" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/title_report_success_dialog" android:fontFamily="@font/sf_pro_text_bold" />
    <TextView android:textSize="14.0dip" android:textColor="@color/black" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/msg_dialog_report_success" android:fontFamily="@font/sf_pro_text_regular" />
    <TextView android:textSize="16.0dip" android:textColor="@color/white" android:gravity="center" android:id="@id/tvDone" android:background="@drawable/bg_main_gpt35_5dp" android:paddingTop="6.0dip" android:paddingBottom="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/done" android:fontFamily="@font/sf_pro_text_semibold" android:paddingVertical="6.0dip" />
</LinearLayout>