<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView android:id="@id/root" android:tag="layout/dialog_discover_gpt4o_0" android:layout_width="fill_parent" android:layout_height="wrap_content" app:cardBackgroundColor="#ffffffff" app:cardCornerRadius="24.0dip" app:cardElevation="0.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="18.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="18.0dip" android:layout_marginHorizontal="16.0dip" android:layout_marginVertical="18.0dip">
        <ImageView android:layout_gravity="center" android:id="@id/imgBanner" android:layout_width="wrap_content" android:layout_height="wrap_content" />
        <TextView android:textSize="20.0sp" android:textColor="#ff0d0f11" android:ellipsize="end" android:layout_gravity="center" android:id="@id/txtGpt4oIsHere" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/gpt_4o_is_here" android:singleLine="true" android:fontFamily="@font/sf_pro_text_bold" />
        <TextView android:textSize="14.0sp" android:textColor="#ff454648" android:gravity="center" android:layout_gravity="center" android:id="@id/txtGpt4oContent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/gpt_4o_newest_and_most_advanced_ai_technology_of_the_world_is_now_available_on_chatbot_ai_do_you_want_to_experience_it" android:fontFamily="@font/sf_pro_text_regular" android:textAlignment="center" />
        <androidx.appcompat.widget.AppCompatButton android:textSize="16.0sp" android:textColor="#ffffffff" android:id="@id/btnDiscoverGpt4o" android:background="@drawable/bg_gradient_button_discover_gpt4o" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/let_s_go" android:textAllCaps="false" android:fontFamily="@font/sf_pro_text_semibold" />
        <TextView android:textSize="16.0sp" android:layout_gravity="center" android:id="@id/txtGpt4oMaybeLater" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="28.0dip" android:text="@string/maybe_later" android:fontFamily="@font/sf_pro_text_semibold" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>