<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:tag="layout/dialog_instruction_widget_0" android:background="@drawable/bg_white_18dp" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="18.0dip" android:textColor="#ff0d0f11" android:gravity="center" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="24.0dip" android:layout_marginRight="16.0dip" android:text="@string/successfully_add_widget_to_your_phone_screen" android:includeFontPadding="false" android:fontFamily="@font/sf_pro_text_bold" android:layout_marginHorizontal="16.0dip" />
    <TextView android:textSize="14.0dip" android:textColor="#ff6e6f70" android:id="@id/description" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="16.0dip" android:text="@string/if_you_can_not_find_the_created_widget_please_try_the_following_steps_to_adda_widget_manually" android:includeFontPadding="false" android:fontFamily="@font/sf_pro_text_regular" android:layout_marginHorizontal="16.0dip" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="16.0dip" android:layout_marginHorizontal="16.0dip">
        <TextView android:textSize="14.0dip" android:textColor="#ff6e6f70" android:id="@id/txt_numer_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="1.  " android:includeFontPadding="false" android:fontFamily="@font/sf_pro_text_bold" />
        <TextView android:textSize="14.0dip" android:textColor="#ff6e6f70" android:id="@id/txt_content_1" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/on_a_home_screen_touch_and_hold_an_empty_space" android:includeFontPadding="false" android:layout_weight="1.0" android:fontFamily="@font/sf_pro_text_bold" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:layout_marginHorizontal="16.0dip">
        <TextView android:textSize="14.0dip" android:textColor="#ff6e6f70" android:id="@id/txt_numer_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="2. " android:includeFontPadding="false" android:fontFamily="@font/sf_pro_text_bold" />
        <TextView android:textSize="14.0dip" android:textColor="#ff6e6f70" android:id="@id/txt_content_2" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/tap_widgets" android:includeFontPadding="false" android:layout_weight="1.0" android:fontFamily="@font/sf_pro_text_bold" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginRight="16.0dip" android:layout_marginHorizontal="16.0dip">
        <TextView android:textSize="14.0dip" android:textColor="#ff6e6f70" android:id="@id/txt_numer_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="3. " android:includeFontPadding="false" android:fontFamily="@font/sf_pro_text_bold" />
        <TextView android:textSize="14.0dip" android:textColor="#ff6e6f70" android:id="@id/txt_content_3" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/touch_and_hold_a_widget_slide_the_widget_to_where_you_want_it" android:includeFontPadding="false" android:layout_weight="1.0" android:fontFamily="@font/sf_pro_text_bold" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="16.0dip" android:layout_marginBottom="24.0dip" android:layout_marginHorizontal="16.0dip">
        <com.google.android.material.card.MaterialCardView android:id="@id/instruction" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" android:layout_marginEnd="4.0dip" app:cardBackgroundColor="@android:color/transparent" app:cardCornerRadius="10.0dip" app:cardElevation="0.0dip">
            <TextView android:textSize="16.0dip" android:textColor="#ffb4b5b5" android:gravity="center" android:background="@drawable/bg_line_chat_user_halloween_10dp" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/instruction" android:includeFontPadding="false" android:layout_weight="1.0" android:fontFamily="@font/sf_pro_text_semibold" />
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView android:id="@id/got_it" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" android:layout_marginStart="4.0dip" app:cardBackgroundColor="@android:color/transparent" app:cardCornerRadius="10.0dip" app:cardElevation="0.0dip">
            <TextView android:textSize="16.0dip" android:textColor="@color/white" android:gravity="center" android:background="#ff03c0b7" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/got_it" android:includeFontPadding="false" android:layout_weight="1.0" android:fontFamily="@font/sf_pro_text_semibold" />
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</LinearLayout>