<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView android:orientation="vertical" android:id="@id/main" android:tag="layout/dialog_over_message_0" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="20.0dip" android:backgroundTint="@color/white" app:cardCornerRadius="10.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:paddingLeft="15.0dip" android:paddingTop="31.0dip" android:paddingRight="15.0dip" android:paddingBottom="31.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingHorizontal="15.0dip" android:paddingVertical="31.0dip">
        <ImageView android:layout_gravity="center_horizontal" android:id="@id/ic_bot" android:layout_width="140.0dip" android:layout_height="128.0dip" />
        <TextView android:textSize="18.0dip" android:textColor="@color/black" android:layout_gravity="center_horizontal" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/title_dialog_over_message" android:fontFamily="@font/sf_pro_text_bold" />
        <TextView android:textSize="14.0dip" android:textColor="@color/black" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:id="@id/tvMsgReward" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:text="@string/msg_dialog_over_message" android:fontFamily="@font/sf_pro_text_regular" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
            <TextView android:textSize="16.0dip" android:textColor="@color/white" android:gravity="center" android:id="@id/tvCancel" android:background="@drawable/bg_cancel_over_message_10dp" android:paddingTop="14.0dip" android:paddingBottom="14.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" android:text="@string/cancel" android:layout_weight="1.0" android:fontFamily="@font/sf_pro_text_bolditalic" android:layout_marginHorizontal="8.0dip" android:paddingVertical="14.0dip" />
            <TextView android:textSize="16.0dip" android:textColor="@color/white" android:gravity="center" android:id="@id/tvUpgrade" android:background="@drawable/bg_upgrade_10dp" android:paddingTop="14.0dip" android:paddingBottom="14.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginRight="8.0dip" android:text="@string/upgrade" android:layout_weight="1.0" android:fontFamily="@font/sf_pro_text_bolditalic" android:layout_marginHorizontal="8.0dip" android:paddingVertical="14.0dip" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>